--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <section class="advantages">
         <div class="promo-wrapper">
           <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
-          <p class="advantages-main-title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-          <p class="advantages-main-desc">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+          <p class="promo-main-title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="promo-main-desc">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         </div>
         <ol class="advantages-list">
           <li class="advantages-item true-town">
