--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="search-form-wrapper">
           <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
           <p class="search-form-title title">Заинтересовались?</p>
-          <p class="search-form-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="search-form-desc">Укажите предполагаемые даты поездки,<br/> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a href="#" class="button search-form-button">Поиск гостиницы в Cедоне</a>
         </div>
       </section>
