Grids in catalog and forms

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter-form">
           <label class="newsletter-label">
             <span class="visually-hidden">Введите ваш e-mail:</span>
-            <input name="newsletter" type="email" placeholder="Ваш e-mail">
+            <input name="newsletter-email" type="email" placeholder="Ваш e-mail">
           </label>
           <button class="button subscribe-button">Подписаться</button>
         </form>
