--- a/catalog.html
+++ b/catalog.html
@@ -126,17 +126,19 @@
               <legend class="filter-form-title">
                 Стоимость, ₽:
               </legend>
-              <label class="control min-price">
-                От
-                <input class="control-input" type="text" name="min-price" placeholder="0">
-              </label>
-              <label class="control max-price">
-                До
-                <input class="control-input" type="text" name="max-price" placeholder="9000">
-              </label>
-              <label class="control">
-                <input class="control-input" type="range" min="0" max="9000">
-              </label>
+              <div class="price-controls">
+                <label class="control min-price">
+                  <span class="visually-hidden">От</span>
+                  <input class="control-input" type="text" name="min-price" placeholder="0">
+                </label>
+                <label class="control max-price">
+                  <span class="visually-hidden">До</span>
+                  <input class="control-input" type="text" name="max-price" placeholder="9000">
+                </label>
+                <label class="control range">
+                  <input class="control-input" type="range" min="0" max="9000">
+                </label>
+              </div>
             </fieldset>
             <div class="filter-buttons">
               <button class="filter-form-button button" type="submit">Применить</button>
@@ -177,72 +179,88 @@
         <!-- ГОСТИНИЦЫ -->
         <ul class="hotel-list">
           <li class="hotel-item">
-            <a href="#" class="hotel-link">
-              <img src="images/hotels/hotel-1-1.jpg" width="300" height="211" alt="красивый вид из пещеры на звездное небо" class="hotel-image">
-              <h3 class="hotel-name">Amara Resort & Spa</h3>
-            </a>
-            <dl class="hotel-price-list">
-              <dt class="accommodation-type">Гостиница</dt>
-              <dd class="hotel-price">От 4000 ₽</dd>
-            </dl>
-            <a href="#" class="hotel-about-button button">Подробнее</a>
-            <button type="button" class="hotel-favorites-button button">В избранное</button>
-            <div class="hotel-stars">
-              <span class="visually-hidden">4 звезды</span>
-              <span class="rating-star">4</span>
+            <div class="hotel-item-content">
+              <a href="#" class="hotel-link">
+                <img src="images/hotels/hotel-1-1.jpg" width="300" height="211" alt="красивый вид из пещеры на звездное небо" class="hotel-image">
+              </a>
+              <a href="#" class="hotel-link">
+                <h3 class="hotel-name">Amara Resort & Spa</h3>
+              </a>
+              <dl class="hotel-price-list">
+                <dt class="accommodation-type">Гостиница</dt>
+                <dd class="hotel-price">От 4000 ₽</dd>
+              </dl>
+              <a href="#" class="hotel-about-button button">Подробнее</a>
+              <button type="button" class="hotel-favorites-button button">В избранное</button>
+              <div class="hotel-stars">
+                <span class="visually-hidden">4 звезды</span>
+                <span class="rating-star">4</span>
+              </div>
+              <span class="hotel-rating">Рейтинг 8,5</span>
             </div>
-            <span class="hotel-rating">Рейтинг 8,5</span>
           </li>
           <li class="hotel-item">
-            <a href="#" class="hotel-link">
-              <img src="images/hotels/hotel-1-2.jpg" width="300" height="211" alt="горный хребет, над которым радуга" class="hotel-image">
-              <h3 class="hotel-name">Villas at Poco Diablo</h3>
-            </a>
-            <dl class="hotel-price-list">
-              <dt class="accommodation-type">Гостиница</dt>
-              <dd class="hotel-price">От 5000 ₽</dd>
-            </dl>
-            <a href="#" class="hotel-about-button button">Подробнее</a>
-            <button type="button" class="hotel-favorites-button button added-favorites-button">В избранном</button>
-            <div class="hotel-stars">
-              <span class="visually-hidden">4 звезды</span>
-              <span class="rating-star">4</span>
+            <div class="hotel-item-content">
+              <a href="#" class="hotel-link">
+                <img src="images/hotels/hotel-1-2.jpg" width="300" height="211" alt="горный хребет, над которым радуга" class="hotel-image">
+              </a>
+              <a href="#" class="hotel-link">
+                <h3 class="hotel-name">Villas at Poco Diablo</h3>
+              </a>
+              <dl class="hotel-price-list">
+                <dt class="accommodation-type">Гостиница</dt>
+                <dd class="hotel-price">От 5000 ₽</dd>
+              </dl>
+              <a href="#" class="hotel-about-button button">Подробнее</a>
+              <button type="button" class="hotel-favorites-button button added-favorites-button">В избранном</button>
+              <div class="hotel-stars">
+                <span class="visually-hidden">4 звезды</span>
+                <span class="rating-star">4</span>
+              </div>
+              <span class="hotel-rating">Рейтинг 9,2</span>
             </div>
-            <span class="hotel-rating">Рейтинг 9,2</span>
           </li>
           <li class="hotel-item">
-            <a href="#" class="hotel-link">
-              <img src="images/hotels/hotel-1-3.jpg" width="300" height="211" alt="скала в пустыне" class="hotel-image">
-              <h3 class="hotel-name">Desert Quail Inn</h3>
-            </a>
-            <dl class="hotel-price-list">
-              <dt class="accommodation-type">Гостиница</dt>
-              <dd class="hotel-price">От 2500 ₽</dd>
-            </dl>
-            <a href="#" class="hotel-about-button button">Подробнее</a>
-            <button type="button" class="hotel-favorites-button button">В избранное</button>
-            <div class="hotel-stars">
-              <span class="visually-hidden">3 звезды</span>
-              <span class="rating-star">3</span>
+            <div class="hotel-item-content">
+              <a href="#" class="hotel-link">
+                <img src="images/hotels/hotel-1-3.jpg" width="300" height="211" alt="скала в пустыне" class="hotel-image">
+              </a>
+              <a href="#" class="hotel-link">
+                <h3 class="hotel-name">Desert Quail Inn</h3>
+              </a>
+              <dl class="hotel-price-list">
+                <dt class="accommodation-type">Гостиница</dt>
+                <dd class="hotel-price">От 2500 ₽</dd>
+              </dl>
+              <a href="#" class="hotel-about-button button">Подробнее</a>
+              <button type="button" class="hotel-favorites-button button">В избранное</button>
+              <div class="hotel-stars">
+                <span class="visually-hidden">3 звезды</span>
+                <span class="rating-star">3</span>
+              </div>
+              <span class="hotel-rating">Рейтинг 6,9</span>
             </div>
-            <span class="hotel-rating">Рейтинг 6,9</span>
           </li>
           <li class="hotel-item">
-            <a href="#" class="hotel-link">
-              <img src="images/hotels/hotel-1.jpg" width="300" height="211" alt="горная гряда на закате" class="hotel-image">
-              <h3 class="hotel-name">GreenTree Inn</h3>
-            </a>
-            <dl class="hotel-price-list">
-              <dt class="accommodation-type">Гостиница</dt>
-              <dd class="hotel-price">От 1500 ₽</dd>
-            </dl>
-            <a href="#" class="hotel-about-button button">Подробнее</a>
-            <button type="button" class="hotel-favorites-button button">В избранное</button>
-            <div class="hotel-stars">
-              <span class="visually-hidden">2 звезды</span>
-              <span class="rating-star">2</span>
+            <div class="hotel-item-content">
+              <a href="#" class="hotel-link">
+                <img src="images/hotels/hotel-1.jpg" width="300" height="211" alt="горная гряда на закате" class="hotel-image">
+              </a>
+              <a href="#" class="hotel-link">
+                <h3 class="hotel-name">GreenTree Inn</h3>
+              </a>
+              <dl class="hotel-price-list">
+                <dt class="accommodation-type">Гостиница</dt>
+                <dd class="hotel-price">От 1500 ₽</dd>
+              </dl>
+              <a href="#" class="hotel-about-button button">Подробнее</a>
+              <button type="button" class="hotel-favorites-button button">В избранное</button>
+              <div class="hotel-stars">
+                <span class="visually-hidden">2 звезды</span>
+                <span class="rating-star">2</span>
+              </div>
+              <span class="hotel-rating">Рейтинг 5,0</span>
             </div>
-            <span class="hotel-rating">Рейтинг 5,0</span>
           </li>
         </ul>
 
@@ -285,9 +303,9 @@
           <p class="newsletter-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
         </div>
         <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter-form">
-          <label class="newsletter-label">
+          <label class="newsletter-label newsletter-label-inner">
             <span class="visually-hidden">Введите ваш e-mail:</span>
-            <input name="newsletter" type="email" placeholder="Ваш e-mail">
+            <input name="newsletter-email" type="email" placeholder="Ваш e-mail">
           </label>
           <button class="button subscribe-button">Подписаться</button>
         </form>
