Flex filter before change to grid

--- a/catalog.html
+++ b/catalog.html
@@ -127,11 +127,11 @@
                 Стоимость, ₽:
               </legend>
               <div class="price-controls">
-                <label class="control min-price">
+                <label class="control price-control">
                   <span class="visually-hidden">От</span>
                   <input class="control-input" type="text" name="min-price" placeholder="0">
                 </label>
-                <label class="control max-price">
+                <label class="control price-control">
                   <span class="visually-hidden">До</span>
                   <input class="control-input" type="text" name="max-price" placeholder="9000">
                 </label>
