--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a href="index.html" class="navigation-link active-link">
+            <a href="index.html" class="navigation-link navigation-active-link">
               Главная
             </a>
           </li>
@@ -37,12 +37,14 @@
           <li class="navigation-item">
             <a href="" class="navigation-link search">
               <span class="visually-hidden">Поиск</span>
+              <svg class="navigation-link-icon" width="19" height="19" fill="none" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="m18.16 17.05-3.71-3.7c1-1.3 1.7-3 1.7-4.9 0-4.4-3.6-8-8.02-8a8.12 8.12 0 0 0-8.02 8.1c0 4.4 3.6 8 8.02 8 1.8 0 3.51-.6 4.91-1.7l3.71 3.7 1.4-1.5Zm-10.03-2.5c-3.3 0-6.02-2.7-6.02-6a6.03 6.03 0 0 1 12.04 0c0 3.3-2.71 6-6.02 6Z" fill="#000"/></svg>
             </a>
           </li>
           <li class="navigation-item">
             <a href="" class="navigation-link favorites">
                 <span class="visually-hidden">Гостиниц в избранном:</span>
-                <span class="favorites-counter">12</span>
+                <svg class="navigation-link-icon" width="19" height="17" fill="none" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M9.58 17c-.3 0-.6-.1-.8-.4-5.42-6.1-6.72-7.5-7.03-7.9A5.4 5.4 0 0 1 6.16 0c1.31 0 2.51.5 3.52 1.3a5.47 5.47 0 0 1 9.03 4.1c0 1.3-.5 2.5-1.31 3.4l-7.02 7.9c-.2.2-.4.3-.8.3ZM3.56 7.5c.3.4 3.51 4 6.12 6.9l6.21-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.71 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4a3.7 3.7 0 0 0-2.71-1.3c-1.8 0-3.31 1.5-3.31 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" fill="#000"/></svg>
+               <!-- <span class="favorites-counter">12</span> -->
             </a>
           </li>
           <li class="navigation-item">
@@ -72,53 +74,69 @@
           <li class="advantages-item true-town">
             <div class="true-town-wrapper">
               <div class="true-town-content">
-                <h3 class="advantages-title">Настоящий городок</h3>
-                <span class="advantages-num">— №1 —</span>
-                <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                <div class="advantages-item-wrapper">
+                  <h3 class="advantages-title">Настоящий городок</h3>
+                  <span class="advantages-num">— №1 —</span>
+                  <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                </div>
               </div>
               <div class="true-town-image">
                 <img src="images/photo-1.jpg" width="800" height="384" alt="Улица с зеленым домом и американскими флажками">
               </div>
             </div>
             <div class="advantages-more-wrapper">
-              <ul class="advantages-more features-list">
+              <ul class="advantages-more-list">
                 <li class="advantages-item motel">
-                  <h4 class="advantages-title">Жильё</h4>
-                  <p class="advantages-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                  <div class="advantages-item-wrapper">
+                    <h4 class="advantages-title">Жильё</h4>
+                    <p class="advantages-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                  </div>
                 </li>
                 <li class="advantages-item food">
-                  <h4 class="advantages-title">Еда</h4>
-                  <p class="advantages-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                  <div class="advantages-item-wrapper">
+                    <h4 class="advantages-title">Еда</h4>
+                    <p class="advantages-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                  </div>
                 </li>
                 <li class="advantages-item souvenirs">
-                  <h4 class="advantages-title">Сувениры</h4>
-                  <p class="advantages-desc">Не только китайского, но и настоящего местного производства!</p>
+                  <div class="advantages-item-wrapper">
+                    <h4 class="advantages-title">Сувениры</h4>
+                    <p class="advantages-desc">Не только китайского, но и настоящего местного производства!</p>
+                  </div>
                 </li>
               </ul>
             </div>
           </li>
           <li class="advantages-item devil-bridge">
             <div class="devil-bridge-wrapper">
-              <h3 class="advantages-title">Там есть мост дьявола</h3>
-              <span class="advantages-num">— №2 —</span>
-              <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <div class="advantages-item-wrapper">
+                <h3 class="advantages-title">Там есть мост дьявола</h3>
+                <span class="advantages-num">— №2 —</span>
+                <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </div>
             </div>
             <img src="images/photo-2.jpg" width="800" height="384" alt="Узкая скала в каньоне, похожая на мост">
           </li>
           <li class="advantages-item small-square">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <span class="advantages-num">— №3 —</span>
-            <p class="advantages-desc">Все достопримечательности находятся очень близко</p>
+            <div class="advantages-item-wrapper">
+              <h3 class="advantages-title">Небольшая площадь</h3>
+              <span class="advantages-num">— №3 —</span>
+              <p class="advantages-desc">Все достопримечательности находятся очень близко</p>
+            </div>
           </li>
           <li class="advantages-item beautiful-road">
-            <h3 class="advantages-title">Красивая <br/> дорога</h3>
-            <span class="advantages-num">— №4 —</span>
-            <p class="advantages-desc">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <div class="advantages-item-wrapper">
+              <h3 class="advantages-title">Красивая <br/> дорога</h3>
+              <span class="advantages-num">— №4 —</span>
+              <p class="advantages-desc">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
           </li>
           <li class="advantages-item few-tourists">
-            <h3 class="advantages-title">Мало <br/> туристов</h3>
-            <span class="advantages-num">— №5 —</span>
-            <p class="advantages-desc">Большинство едет в Гранд Каньон и толпится там</p>
+            <div class="advantages-item-wrapper">
+              <h3 class="advantages-title">Мало <br/> туристов</h3>
+              <span class="advantages-num">— №5 —</span>
+              <p class="advantages-desc">Большинство едет в Гранд Каньон и толпится там</p>
+            </div>
           </li>
         </ol>
       </section>
@@ -159,16 +177,19 @@
             <li class="footer-social-item">
               <a class="social-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Vkontakte</span>
+                <svg class="social-link-icon" width="24" height="15" fill="none" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#a)"><path fill-rule="evenodd" clip-rule="evenodd" d="M23.45 1.45c.17-.55 0-.95-.8-.95h-2.62c-.67 0-.98.35-1.14.73 0 0-1.34 3.2-3.23 5.27-.61.6-.89.8-1.22.8-.17 0-.42-.2-.42-.74V1.45c0-.66-.18-.95-.74-.95H9.15c-.42 0-.67.3-.67.6 0 .61.95.76 1.05 2.5v3.8c0 .84-.16.99-.5.99-.88 0-3.05-3.21-4.33-6.89-.25-.71-.5-1-1.17-1H.9c-.75 0-.9.35-.9.73 0 .68.89 4.07 4.14 8.55 2.18 3.06 5.23 4.72 8.01 4.72 1.67 0 1.88-.37 1.88-1v-2.32c0-.73.16-.88.69-.88.38 0 1.05.2 2.61 1.67 1.78 1.75 2.07 2.53 3.08 2.53h2.62c.75 0 1.13-.37.91-1.1-.24-.72-1.09-1.77-2.21-3.02-.62-.7-1.54-1.47-1.81-1.86-.4-.49-.28-.7 0-1.14 0 0 3.2-4.43 3.53-5.93Z" fill="#83B3D3"/></g><defs><clipPath id="a"><path fill="#fff" transform="translate(0 .5)" d="M0 0h24v14H0z"/></clipPath></defs></svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="social-link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Telegram</span>
+                <svg class="social-link-icon" width="18" height="17" fill="none" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#a)"><path d="M16.79.6.84 6.75c-1.09.43-1.08 1.04-.2 1.31l4.1 1.28 9.47-5.98c.44-.27.85-.12.52.18l-7.68 6.92-.28 4.22c.41 0 .6-.19.83-.41l1.99-1.93 4.13 3.05c.77.42 1.31.2 1.5-.7l2.72-12.8C18.22.77 17.5.27 16.79.59Z" fill="#83B3D3"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h18v17H0z"/></clipPath></defs></svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Youtube</span>
+                <svg class="social-link-icon" width="22" height="17" fill="none" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M18.6 0H3.18C1.31 0 0 1.6 0 3.4v10.1C0 15.4 1.31 17 3.17 17h15.66c1.64 0 3.17-1.6 3.17-3.4V3.4C21.78 1.6 20.47 0 18.6 0ZM7.67 12.54V4.46L15 8.5l-7.33 4.04Z" fill="#83B3D3"/></svg>
               </a>
             </li>
           </ul>
