--- a/catalog.html
+++ b/catalog.html
@@ -5,30 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Каталог гостиниц в Седоне</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/outline.css">
   </head>
   <body>
   <div class="container">
 
     <!-- ШАПКА -->
     <header class="page-header">
-      <a href="index.html" class="logo">
+      <a class="logo" href="index.html">
         <img src="images/logo.svg" width="139" height="70" alt="Логотип">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a href="index.html" class="navigation-link">
+            <a class="navigation-link" href="index.html">
               Главная
             </a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link">
+            <a class="navigation-link" href="#">
               О Седоне
             </a>
           </li>
           <li class="navigation-item">
-            <a href="catalog.html" class="navigation-link navigation-active-link">
+            <a class="navigation-link navigation-active-link" href="catalog.html">
               Гостиницы
             </a>
           </li>
@@ -43,8 +42,8 @@
           <li class="navigation-item">
             <a href="" class="navigation-link favorites">
               <span class="visually-hidden">Гостиниц в избранном:</span>
-              <svg class="navigation-link-icon" width="19" height="17" fill="none" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M9.58 17c-.3 0-.6-.1-.8-.4-5.42-6.1-6.72-7.5-7.03-7.9A5.4 5.4 0 0 1 6.16 0c1.31 0 2.51.5 3.52 1.3a5.47 5.47 0 0 1 9.03 4.1c0 1.3-.5 2.5-1.31 3.4l-7.02 7.9c-.2.2-.4.3-.8.3ZM3.56 7.5c.3.4 3.51 4 6.12 6.9l6.21-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.71 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4a3.7 3.7 0 0 0-2.71-1.3c-1.8 0-3.31 1.5-3.31 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" fill="#000"/></svg>
-              <!-- <span class="favorites-counter">12</span> -->
+              <svg class="navigation-link-icon" width="18" height="17" fill="none" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M9.58 17c-.3 0-.6-.1-.8-.4-5.42-6.1-6.72-7.5-7.03-7.9A5.4 5.4 0 0 1 6.16 0c1.31 0 2.51.5 3.52 1.3a5.47 5.47 0 0 1 9.03 4.1c0 1.3-.5 2.5-1.31 3.4l-7.02 7.9c-.2.2-.4.3-.8.3ZM3.56 7.5c.3.4 3.51 4 6.12 6.9l6.21-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.71 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4a3.7 3.7 0 0 0-2.71-1.3c-1.8 0-3.31 1.5-3.31 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" fill="#000"/></svg>
+              <span class="favorites-counter"></span>
             </a>
           </li>
           <li class="navigation-item">
@@ -202,7 +201,10 @@
               <button type="button" class="hotel-favorites-button button">В избранное</button>
               <div class="hotel-stars">
                 <span class="visually-hidden">4 звезды</span>
-                <span class="rating-star">4</span>
+                <span class="star"></span>
+                <span class="star"></span>
+                <span class="star"></span>
+                <span class="star"></span>
               </div>
               <span class="hotel-rating">Рейтинг 8,5</span>
             </div>
@@ -223,7 +225,10 @@
               <button type="button" class="hotel-favorites-button button added-favorites-button">В избранном</button>
               <div class="hotel-stars">
                 <span class="visually-hidden">4 звезды</span>
-                <span class="rating-star">4</span>
+                <span class="star"></span>
+                <span class="star"></span>
+                <span class="star"></span>
+                <span class="star"></span>
               </div>
               <span class="hotel-rating">Рейтинг 9,2</span>
             </div>
@@ -244,7 +249,9 @@
               <button type="button" class="hotel-favorites-button button">В избранное</button>
               <div class="hotel-stars">
                 <span class="visually-hidden">3 звезды</span>
-                <span class="rating-star">3</span>
+                <span class="star"></span>
+                <span class="star"></span>
+                <span class="star"></span>
               </div>
               <span class="hotel-rating">Рейтинг 6,9</span>
             </div>
@@ -265,7 +272,8 @@
               <button type="button" class="hotel-favorites-button button">В избранное</button>
               <div class="hotel-stars">
                 <span class="visually-hidden">2 звезды</span>
-                <span class="rating-star">2</span>
+                <span class="star"></span>
+                <span class="star"></span>
               </div>
               <span class="hotel-rating">Рейтинг 5,0</span>
             </div>
@@ -354,7 +362,8 @@
         <section class="footer-copyright">
           <h3 class="visually-hidden">Сайт сделан</h3>
           <a href="https://htmlacademy.ru" class="copyright-logo">
-            <img src="images/logo_htmlacademy.svg" width="115" height="33" alt="Логотип разработчика сайта htmlacademy">
+            <span class="visually-hidden">Логотип разработчика HTMLAcademy</span>
+            <svg width="115" height="34" fill="#000" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M0 13.9v2.6h2.5v-2.6H0ZM11.6 5.5c-1.6 0-2.8.7-3.6 1.7h-.1V1h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.8h-4.8V2.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V7.8h4.8v-2ZM41.1 5.6c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1V5.8H29v10.6h2V11c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V9.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V1h-2v12.7ZM28.9 20.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V19.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 23c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1V23ZM55.1 20.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V19.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.8c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V14.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.9c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 28l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" /></svg>
           </a>
         </section>
       </div>
