Modal form without statements

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </section>
     </footer>
 
-    <div class="modal-container" style="display:none;">
+    <div class="modal-container">
       <div class="modal modal-search">
         <button class="modal-close-button">
           <span class="visually-hidden">Закрыть</span>
@@ -225,16 +225,14 @@
               <p class="field-group adult-number">
                 <label class="modal-search-label" for="adult-number">Взрослые:</label>
                 <input class="modal-search-field" type="number" id="adult-number" name="search-adult-number" placeholder="2">
-                <button type="button" class="modal-counter-button plus">
-                  <svg width="14" height="14" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" fill="#000"/></svg>
-                </button>
-                <button type="button" class="modal-counter-button minus">
-                  <svg width="15" height="2" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M.11 0v2h14V0h-14Z" fill="#000"/></svg>
-                </button>
+                <button type="button" class="modal-counter-button plus"></button>
+                <button type="button" class="modal-counter-button minus"></button>
               </p>
               <p class="field-group kids-number">
                 <label class="modal-search-label" for="kids-number">Дети:</label>
                 <input class="modal-search-field" type="number" id="kids-number" name="search-kids-number" placeholder="1">
+                <button type="button" class="modal-counter-button plus"></button>
+                <button type="button" class="modal-counter-button minus"></button>
               </p>
             </div>
             <button class="button modal-search-button" type="submit">Найти</button>
