--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </section>
     </footer>
 
-    <div class="modal-container">
+    <div class="modal-container" style="display: none">
       <div class="modal modal-search">
         <button class="modal-close-button">
           <span class="visually-hidden">Закрыть</span>
