--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link navigation-active-link" href="index.html">
+            <a class="navigation-link" href="index.html">
               Главная
             </a>
           </li>
@@ -27,7 +27,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">
+            <a class="navigation-link navigation-active-link" href="catalog.html">
               Гостиницы
             </a>
           </li>
@@ -208,12 +208,8 @@
               </dl>
               <a href="#" class="hotel-about-button button">Подробнее</a>
               <button type="button" class="hotel-favorites-button button">В избранное</button>
-              <div class="hotel-stars">
+              <div class="hotel-stars stars-4">
                 <span class="visually-hidden">4 звезды</span>
-                <span class="star"></span>
-                <span class="star"></span>
-                <span class="star"></span>
-                <span class="star"></span>
               </div>
               <span class="hotel-rating">Рейтинг 8,5</span>
             </div>
@@ -232,12 +228,8 @@
               </dl>
               <a href="#" class="hotel-about-button button">Подробнее</a>
               <button type="button" class="hotel-favorites-button button added-favorites-button">В избранном</button>
-              <div class="hotel-stars">
+              <div class="hotel-stars stars-4">
                 <span class="visually-hidden">4 звезды</span>
-                <span class="star"></span>
-                <span class="star"></span>
-                <span class="star"></span>
-                <span class="star"></span>
               </div>
               <span class="hotel-rating">Рейтинг 9,2</span>
             </div>
@@ -256,11 +248,8 @@
               </dl>
               <a href="#" class="hotel-about-button button">Подробнее</a>
               <button type="button" class="hotel-favorites-button button">В избранное</button>
-              <div class="hotel-stars">
+              <div class="hotel-stars stars-3">
                 <span class="visually-hidden">3 звезды</span>
-                <span class="star"></span>
-                <span class="star"></span>
-                <span class="star"></span>
               </div>
               <span class="hotel-rating">Рейтинг 6,9</span>
             </div>
@@ -279,10 +268,8 @@
               </dl>
               <a href="#" class="hotel-about-button button">Подробнее</a>
               <button type="button" class="hotel-favorites-button button">В избранное</button>
-              <div class="hotel-stars">
+              <div class="hotel-stars stars-2">
                 <span class="visually-hidden">2 звезды</span>
-                <span class="star"></span>
-                <span class="star"></span>
               </div>
               <span class="hotel-rating">Рейтинг 5,0</span>
             </div>
